

14928 cards in total.


-------------
Release Notes
-------------

- Permanent locations for Net Decks and Achievement trophies -
All Net Deck categories should now find decks and won't stop returning decks when new decks are added
A new "Download Achievement Images" button has been added to Content Downloaders for downloading awesome trophies for each achievement.


- Keyboard shortcuts for Auto Yield -
There are two new keyboard shortcuts now that can be used to quickly set up an
auto-yield for the current ability on stack without having to use the mouse. 
By default the shortcuts are:
- "Y" enables auto-yield and, if applicable, enables "Always Yes" (if the trigger
is optional).
- "N" enables auto-yield and, if applicable, enables "Always No" (if the trigger
is optional).
The shortcuts can be changed in the Preferences under Game Settings in the main
Forge menu. 


- New Battle for Zendikar cards -
We have added a branch to our SVN for the new cards that are currently being scripted. These cards are not yet available in this build of forge. Please be patient and they will soon become available.


- Network play (BETA) -
This version of Forge includes a preliminary version of peer-to-peer (P2P)
network support. If one player hosts, other players can connect to that
player's machine by filling out the corresponding IP address and port number
(default 36743), provided the lobby contains one or more open player slots.
Do not expect network support to work reliably yet, any bug reports or other
comments are welcome!


---------
New cards
---------

Grinning Toem


-----------------------------
New Battle for Zendikar cards
-----------------------------

Veteran Warleader
Retreat to Kazandu
Sheer Drop
Dominator Drone
Forerunner of Slaughter
Guardian of Tazeem


------------
Known Issues
------------

- Magic Origins -